<resources>
    <string name="app_name">PuggyBank</string>
    <string name="Button1">1</string>
    <string name="Button2">2</string>
    <string name="Button3">3</string>
    <string name="Button4">4</string>
    <string name="Button5">5</string>
    <string name="Button6">6</string>
    <string name="Button7">7</string>
    <string name="Button8">8</string>
    <string name="Button9">9</string>
    <string name="Button0">0</string>
    <string name="DeleteButton">&lt;</string>
    <string name="hello_blank_fragment">temp</string>
    <string name="dateTo">До</string>
    <string name="dateFrom">С</string>
    <string name="selectDateTo">1970–01–01</string>
    <string name="selectDateFrom">1970–01–01</string>
    <string name="transactionText">%s, %s, %s</string>
    <string name="LoginText">Вход</string>
    <string name="tryLoginButton">Войти</string>
    <string name="phoneNumberText">Номер телефона</string>
    <string name="passwordText">Пароль</string>
    <string name="startPhoneNumber">+7</string>
    <string name="incorrectPIN">Некорректный PIN</string>
    <string name="unableToAuth">Не удалось войти</string>
    <string name="enter2faCode">Введите код</string>
    <string name="submit">Принять</string>
    <string name="incorrect2faCode">Неверный код</string>
    <string name="cancel">Отмена</string>
    <string name="rubleSign">₽</string>
    <string name="consumption">Расход</string>
    <string name="income">Доход</string>
    <string name="fingerprintLogin">Вход по отпечатку пальца</string>
    <string name="usePIN">Использовать PIN</string>
    <string name="requires2faAuthentication">Требуется двухфакторная аутентификация</string>
    <string name="noClientId">Авторизация не удалась. Ответ сервера не содержит идентификатор пользователя</string>
    <string name="noMetaTagCsrf">Unable to find meta in response body for csrf parsing.</string>
    <string name="noCsrfInMetaTag">Не удалось найти содержимое в мета-теге для разбора csrf</string>
</resources>