<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginScreenFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/EnterTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LoginText"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.087" />

        <EditText
            android:id="@+id/phoneNumberText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="76dp"
            android:autofillHints="phone"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/phoneNumberText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/EnterTextView" />

        <EditText
            android:id="@+id/editPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="64dp"
            android:ems="10"
            android:hint="@string/passwordText"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumberText" />

        <Button
            android:id="@+id/tryLoginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/tryLoginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editPasswordText" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>